[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/gui/stopwatch/stopwatch.gd" type="Script" id=1]

[node name="Stopwatch" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 11.0
margin_top = 11.0
margin_right = 1262.0
margin_bottom = 80.0
text = "00 : 00 : 00 : 00 : 000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 360.0
margin_top = 179.0
margin_right = 372.0
margin_bottom = 199.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StopButton" type="Button" parent="."]
margin_left = 541.0
margin_top = 178.0
margin_right = 553.0
margin_bottom = 198.0
text = "Stop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="."]
margin_left = 726.0
margin_top = 183.0
margin_right = 738.0
margin_bottom = 203.0
disabled = true
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="StopButton" to="." method="_on_StopButton_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
